# AzureFOCUSExport

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: azure-import.yml
docs/: architecture.md  azure-pipeline.md  bicep-deploy-notebook.md  bicep-runnable-notebook.md  fabric-integration.md  setup-guide.md
infra/: deploy-runnable-notebook-aci-private.bicepparam  deploy-runnable-notebook-aci.bicep  deploy-runnable-notebook-aci.bicepparam  deploy-single-notebook.bicep  deploy-single-notebook.bicepparam
notebooks/: focus_single_pipeline.ipynb  focus_source_pipeline.ipynb
src/azure_focus_export/: __init__.py  auth.py  cli.py  config.py  exports_api.py  monitor.py  scheduler.py  seeder.py  utils.py
